Simplify logic and fix z-index of popup on RUI

--- a/projects/ccf-rui/src/styles.scss
+++ b/projects/ccf-rui/src/styles.scss
@@ -102,3 +102,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .dark-theme .mat-tooltip {
   background: rgba(97, 97, 97);
 }
+
+.cdk-global-overlay-wrapper {
+  z-index: 1001;
+}
